# megara-tools

./: AUTHORS.txt  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
megaratools/: analyze.py  analyze_cube.py  analyze_rss.py  analyze_spectrum.py  atan_model.py  diffuse_light.py  extract_elliptical_rings_spectrum.py  extract_spectrum.py  hypercube.py  plot_spectrum.py  rss_arith.py  satools1.py  satools2.py
